polyline feedback updated